# mnist-pipeline

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md  config.yaml  config.yml  dvc.yaml  main.py  params.yaml  pyproject.toml  report.md  setup.cfg  setup.py  sweep.yaml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.github/workflows/: cml.yaml  docker.yaml  pipeline.yaml  test-pipeline.yaml
config/: pipeline.yml  test.yml
data/: .gitignore  accuracy.json  metrics.json  raw.dvc
mnist/: __init__.py  __main__.py  config.py  config_test.py  constants.py  dataset.py  dataset_test.py  deploy.py  evaluate.py  files.py  files_test.py  loss.py  model.py  model_test.py  preprocess.py  sweep.py  train.py
