[tool.poetry]
name = "mnist-pipeline"
version = "0.3.0"
description = "A toy ML pipeline that creates a digit classifier with features that can be exported."
authors = ["Ben Cook <jbenjamincook@gmail.com>"]
license = "MIT"
packages = [
    { include = "mnist" }
]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.9.0"
torchmetrics = "^0.3.2"
pytorch-lightning = "^1.3.5"
fire = "^0.4.0"
torchvision = "^0.10.0"
omegaconf = "^2.1.0"
wandb = "^0.10.32"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.5"
dvc = "^2.3.0"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mnist = "mnist.__main__:main"
