[tool.poetry]
name = "mnist-pipeline"
version = "0.3.0"
description = "A toy ML pipeline that creates a digit classifier with features that can be exported."
authors = ["Ben Cook <jbenjamincook@gmail.com>"]
license = "MIT"
packages = [
    { include = "mnist" }
]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.9.0"
torchmetrics = "^0.3.2"
pytorch-lightning = "^1.3.5"
fire = "^0.4.0"
torchvision = "^0.10.0"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.5"
dvc = {extras = ["s3"], version = "^2.7.4"}
black = "^21.6b0"
awscli = "~1.19.106"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
